<resources>
    <string name="LIVE_APIKEY_PART_A">8931CBFFAD3CE3E07F5E</string>
    <string name="TESTKEY_APIKEY_PART_A">8FA6DE6686867C46547F</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="accept">Accept</string>
    <string name="accept_button_string">ACCEPT</string>
    <string name="accept_label">ACCEPTED</string>
    <string name="access_installed_package_list_permission">Access installed packages list</string>
    <string name="accessbility_suggestion_dropdown_opened">Contact suggestions opened</string>
    <string name="accessibility_all_day">All day</string>
    <string name="accessibility_birthday_label">Birthday</string>
    <string name="accessibility_close">Close</string>
    <string name="accessibility_color_blue">Blue</string>
    <string name="accessibility_color_green">Green</string>
    <string name="accessibility_color_grey">Gray</string>
    <string name="accessibility_color_light_blue">Light blue</string>
    <string name="accessibility_color_mint_green">Mint green</string>
    <string name="accessibility_color_navy_purple">Navy purple</string>
    <string name="accessibility_color_orange">Orange</string>
    <string name="accessibility_color_purple">Purple</string>
    <string name="accessibility_color_red">Red</string>
    <string name="accessibility_color_rosy_brown">Rosy brown</string>
    <string name="accessibility_color_yellow">Yellow</string>
    <string name="accessibility_delete_reminder">Delete reminder</string>
    <string name="accessibility_drawer_close">Pull-out menu closed</string>
    <string name="accessibility_drawer_opened">Pull-out menu opened</string>
    <string name="accessibility_next_day">Next day</string>
    <string name="accessibility_next_month">Next month</string>
    <string name="accessibility_previous_day">Previous day</string>
    <string name="accessibility_previous_month">Previous month</string>
    <string name="accessibility_start_time_to_end_time">%1$s to %2$s</string>
    <string name="accessibility_weather_cloudy">Cloudy</string>
    <string name="accessibility_weather_current">Current temperature is %1$s</string>
    <string name="accessibility_weather_fog">Fog</string>
    <string name="accessibility_weather_high">Highest temperature is %1$s</string>
    <string name="accessibility_weather_ice">Cold</string>
    <string name="accessibility_weather_low">Lowest temperature is %1$s</string>
    <string name="accessibility_weather_night">Clear night</string>
    <string name="accessibility_weather_night_haze">Hazy night</string>
    <string name="accessibility_weather_night_mostly_cloudy">Mostly cloudy night</string>
    <string name="accessibility_weather_night_mostly_cloudy_with_showers">Mostly cloudy night with showers</string>
    <string name="accessibility_weather_night_partly_cloudy">Partly cloudy night</string>
    <string name="accessibility_weather_partly_sunny_with_showers">Partly sunny with showers</string>
    <string name="accessibility_weather_rain">Rain</string>
    <string name="accessibility_weather_showers">Showers</string>
    <string name="accessibility_weather_sleet">Sleet</string>
    <string name="accessibility_weather_snow">Snow</string>
    <string name="accessibility_weather_sun_haze">Hazy sunshine</string>
    <string name="accessibility_weather_sun_mostly_cloudy">Mostly cloudy</string>
    <string name="accessibility_weather_sun_partly_cloudy">Mostly sunny</string>
    <string name="accessibility_weather_sunny">Sunny</string>
    <string name="accessibility_weather_thunder">Thunder</string>
    <string name="accessibility_weather_windy">Windy</string>
    <string name="account_settings_default_label">Default account</string>
    <string name="accounts">Accounts &amp; sync</string>
    <string name="accuweather_name">AccuWeather</string>
    <string name="action_label">Enter</string>
    <string name="add_new_reminder">Add reminder</string>
    <string name="add_to_contact">Add to contacts</string>
    <string name="agenda_minutes_until_indicator_txt">In %1$d min</string>
    <string name="agenda_next_indicator_txt">Next</string>
    <string name="agenda_no_events">No events</string>
    <string name="agenda_now_indicator_txt">Now</string>
    <string name="agenda_today">Today, %1$s</string>
    <string name="agenda_view">Agenda</string>
    <string name="alert_number_in_action_bar">Tasks (%s)</string>
    <string name="alert_title">Calendar notifications</string>
    <string name="alert_when_label">When:</string>
    <string name="alert_where_label">Where:</string>
    <string name="all_attendees_availability_label">All attendees</string>
    <string name="and">and</string>
    <string name="clr_strings_event_forward_action_txt">Forward</string>
    <string name="clr_strings_weather_unit_settings">Temperature format</string>
    <string name="clr_strings_weather_update_settings">Update interval</string>
    <string name="connect_with_linkedin_label">Connect with LinkedIn</string>
    <string name="delete_label">Delete</string>
    <string name="edit_label">Edit</string>
    <string name="event_color_picker_title">Event color</string>
    <string name="preferences_alerts_title">Notifications</string>
    <string name="preferences_default_reminder_default">10</string>
    <string name="preferences_default_reminder_dialog">Default reminder time</string>
    <string name="preferences_default_reminder_title">Default reminder time</string>
    <string name="preferences_default_weather_unit">Celsius</string>
    <string name="preferences_default_weather_update">1800000</string>
    <string name="preferences_display_birthdays">Birthdays</string>
    <string name="preferences_display_weather">Weather forecast</string>
    <string name="preferences_general_title">Calendar view settings</string>
    <string name="preferences_theme_title">Theme</string>
    <string name="preferences_hide_declined_title">Hide declined events</string>
    <string name="preferences_home_tz_title">Home time zone</string>
    <string name="preferences_linkedin_summary">Connect with LinkedIn to get access to more contact information from your meetings</string>
    <string name="preferences_linkedin_title">LinkedIn</string>
    <string name="preferences_national_holidays_dialog">National holidays</string>
    <string name="preferences_national_holidays_title">National holidays</string>
    <string name="preferences_notification_channel_summary">Notification channel settings</string>
    <string name="preferences_notification_channel_title">Notification settings</string>
    <string name="preferences_reminder_title">Reminder settings</string>
    <string name="preferences_show_alarms">Show alarms</string>
    <string name="preferences_show_week_number_title">Show week numbers</string>
    <string name="preferences_use_home_tz_descrip">Show calendars and events in your home time zone</string>
    <string name="preferences_use_home_tz_title">Use home time zone</string>
    <string name="preferences_weather_current_location_description">Current location</string>
    <string name="preferences_weather_home_location">Home location</string>
    <string name="preferences_week_days_default">7</string>
    <string name="preferences_week_days_title">Days in week view</string>
    <string name="preferences_week_days_type_dialog">Days in week view</string>
    <string name="preferences_week_start_day_default">-1</string>
    <string name="preferences_week_start_day_dialog">Week starts on</string>
    <string name="preferences_week_start_day_title">Week starts on</string>
    <string name="preferences_weekend_dialog">Weekend</string>
    <string name="preferences_weekend_title">Weekend</string>
    <string name="quick_response_settings">Quick responses</string>
    <string name="quick_response_settings_summary">Edit default responses when emailing guests</string>
    <string name="read_contact_permission">Read contacts</string>
    <string name="retrieve_location_info_permission">Retrieve location info</string>
    <string name="settings_widget_category">Calendar widget settings</string>
    <string name="task_option_menu_clear_completed_txt">Delete completed tasks</string>
    <string name="task_option_menu_refresh_txt">Refresh</string>
    <string name="task_option_menu_search_txt">Search</string>
    <string name="task_option_menu_settings_txt">Settings</string>
    <string name="task_option_menu_sort_txt">Sort</string>
    <string name="use_wifi_mobile_data_permission">Use Wi-Fi &amp; mobile data</string>
    <string name="vCal_share_menu">Share</string>
    <string name="view_linkedin_search_profile_company">Company</string>
    <string name="view_linkedin_search_profile_first_name">First name</string>
    <string name="view_linkedin_search_profile_last_name">Last name</string>
    <string name="view_linkedin_search_profile_position">Position</string>
    <string name="view_linkedin_search_profile_title">Title</string>
    <string name="welcome_get_started">Get started</string>
    <string name="welcome_screen_linkedin_message">You can connect with LinkedIn to get latest photos and job titles from meeting participants</string>
    <string name="welcome_screen_title">Welcome to Calendar</string>
    <string name="widget_transparency_title">Widget transparency</string>
</resources>