<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/preferences_reminder_title"
        android:key="preferences_alerts_category">
        <SwitchPreference
            android:title="@string/preferences_alerts_title"
            android:key="preferences_alerts"
            android:defaultValue="true"/>
        <Preference
            android:title="@string/preferences_notification_channel_title"
            android:key="preferences_notification_channel_settings"
            android:summary="@string/preferences_notification_channel_summary"
            android:dependency="preferences_alerts"/>
        <ListPreference
            android:entries="@array/preferences_default_reminder_labels"
            android:title="@string/preferences_default_reminder_title"
            android:key="preferences_default_reminder"
            android:defaultValue="@string/preferences_default_reminder_default"
            android:dialogTitle="@string/preferences_default_reminder_dialog"
            android:entryValues="@array/preferences_default_reminder_values"/>
        <PreferenceScreen
            android:title="@string/quick_response_settings"
            android:key="preferences_quick_responses"
            android:summary="@string/quick_response_settings_summary"
            android:fragment="com.sonymobile.calendar.QuickResponseSettings"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/preferences_general_title"
        android:key="preferences_general_title">
        <ListPreference
            android:entries="@array/preferences_theme_labels"
            android:title="@string/preferences_theme_title"
            android:key="preferences_theme"
            android:defaultValue="system"
            android:dialogTitle="@string/preferences_theme_title"
            android:entryValues="@array/preferences_theme_values"/>
        <com.sonymobile.calendar.preference.SortedMultiSelectPreference
            android:entries="@array/preferences_national_holidays_labels"
            android:title="@string/preferences_national_holidays_title"
            android:key="preferences_national_holidays"
            android:dialogTitle="@string/preferences_national_holidays_dialog"
            android:entryValues="@array/preferences_national_holidays_values"/>
        <com.sonymobile.calendar.CustomMultiSelectListPreference
            android:title="@string/preferences_weekend_title"
            android:key="preferences_weekend"
            android:defaultValue="@array/preferences_weekend_default"
            android:dialogTitle="@string/preferences_weekend_dialog"/>
        <ListPreference
            android:entries="@array/preferences_week_days_labels"
            android:title="@string/preferences_week_days_title"
            android:key="preferences_week_days"
            android:defaultValue="@string/preferences_week_days_default"
            android:dialogTitle="@string/preferences_week_days_type_dialog"
            android:entryValues="@array/preferences_week_days_values"/>
        <ListPreference
            android:entries="@array/preferences_week_start_day_labels"
            android:title="@string/preferences_week_start_day_title"
            android:key="preferences_week_start_day"
            android:defaultValue="@string/preferences_week_start_day_default"
            android:dialogTitle="@string/preferences_week_start_day_dialog"
            android:entryValues="@array/preferences_week_start_day_values"/>
        <SwitchPreference
            android:title="@string/preferences_show_week_number_title"
            android:key="preferences_show_week_number"
            android:defaultValue="false"/>
        <SwitchPreference
            android:title="@string/preferences_show_alarms"
            android:key="preferences_show_alarms"
            android:defaultValue="false"/>
        <SwitchPreference
            android:title="@string/preferences_use_home_tz_title"
            android:key="preferences_home_tz_enabled"
            android:summary="@string/preferences_use_home_tz_descrip"
            android:defaultValue="false"/>
        <ListPreference
            android:entries="@array/timezone_labels"
            android:title="@string/preferences_home_tz_title"
            android:key="preferences_home_tz"
            android:dependency="preferences_home_tz_enabled"
            android:dialogTitle="@string/preferences_home_tz_title"
            android:entryValues="@array/timezone_values"/>
        <com.sonymobile.calendar.CustomSwitchPreference
            android:title="@string/preferences_display_weather"
            android:key="preferences_weather_display"
            android:fragment="com.sonymobile.calendar.WeatherPreferences"/>
        <Preference
            android:title="@string/preferences_linkedin_title"
            android:key="preferences_linkedin"
            android:summary="@string/preferences_linkedin_summary"/>
        <com.sonymobile.calendar.CustomSwitchPreference
            android:title="@string/preferences_display_birthdays"
            android:key="preferences_birthday_display"
            android:fragment="com.sonymobile.calendar.birthday.BirthdayPreferences"/>
        <SwitchPreference
            android:title="@string/preferences_hide_declined_title"
            android:key="preferences_hide_declined"
            android:defaultValue="true"/>
        <SwitchPreference
            android:title="@string/retrieve_location_info_permission"
            android:key="preferences_retrieve_location_info"
            android:defaultValue="false"/>
        <SwitchPreference
            android:title="@string/use_wifi_mobile_data_permission"
            android:key="preferences_use_wifi_and_mobile_data"
            android:defaultValue="false"/>
        <SwitchPreference
            android:title="@string/read_contact_permission"
            android:key="preferences_read_contacts"
            android:defaultValue="false"/>
        <SwitchPreference
            android:title="@string/access_installed_package_list_permission"
            android:key="preference_access_package_list"
            android:defaultValue="false"/>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/settings_widget_category">
        <com.sonymobile.calendar.preference.SeekBarPreference
            android:icon="@drawable/calendar_opacity_setting"
            android:title="@string/widget_transparency_title"
            android:key="preferences_widget_transparency"
            android:defaultValue="@integer/widget_default_transparency"/>
    </PreferenceCategory>
</PreferenceScreen>
