<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <View
            android:id="@+id/focus_steel"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:layout_width="0px"
            android:layout_height="0px"/>
        <TextView
            android:textColor="@color/calendar_event_text_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/view_linkedin_search_profile_first_name"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"/>
        <EditText
            android:id="@+id/linkein_search_first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"/>
        <TextView
            android:textColor="@color/calendar_event_text_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/view_linkedin_search_profile_last_name"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"/>
        <EditText
            android:id="@+id/linkein_search_last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"/>
        <TextView
            android:textColor="@color/calendar_event_text_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/view_linkedin_search_profile_company"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"/>
        <EditText
            android:id="@+id/linkein_search_company"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"/>
        <TextView
            android:textColor="@color/calendar_event_text_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/view_linkedin_search_profile_title"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"/>
        <EditText
            android:id="@+id/linkein_search_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"/>
        <TextView
            android:textColor="@color/calendar_event_text_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/view_linkedin_search_profile_position"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"/>
        <EditText
            android:id="@+id/linkein_search_position"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"/>
    </LinearLayout>
</ScrollView>
