<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/drawer_background_color"
    style="@style/WelcomeScreenTheme">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:gravity="center"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:layout_gravity="center"
                android:focusable="false"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/welcome_image_view_padding_top"
                android:src="@drawable/calendar_welcome_icon"/>
            <TextView
                android:textSize="@dimen/welcome_message_text_size"
                android:textColor="@color/calendar_primary_text_color"
                android:paddingTop="@dimen/welcome_in_view_padding_top"
                android:focusable="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/welcome_screen_title"
                android:textAlignment="center"
                android:paddingStart="@dimen/welcome_in_view_padding_start"
                android:paddingEnd="@dimen/welcome_in_view_padding_end"/>
            <Button
                android:textSize="@dimen/welcome_button_text_size"
                android:textColor="@color/white"
                android:gravity="center"
                android:layout_gravity="center_horizontal"
                android:id="@+id/get_started"
                android:background="@drawable/welcome_button_background"
                android:focusable="true"
                android:layout_width="@dimen/welcome_button_width"
                android:layout_height="@dimen/welcome_button_height"
                android:layout_marginTop="@dimen/welcome_button_margin_top"
                android:text="@string/welcome_get_started"
                android:textAllCaps="true"
                android:layout_marginStart="@dimen/welcome_button_margin_start"
                android:layout_marginEnd="@dimen/welcome_button_margin_end"/>
            <TextView
                android:textSize="@dimen/welcome_linkedin_text_size"
                android:textColor="@color/calendar_primary_text_color"
                android:id="@+id/connect_with_linkedin_welcome_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/welcome_image_view_padding_top"
                android:text="@string/welcome_screen_linkedin_message"
                android:textAlignment="center"
                android:paddingStart="@dimen/in_view_padding_start"
                android:paddingEnd="@dimen/welcome_in_view_padding_end"/>
            <Button
                android:textSize="@dimen/welcome_button_text_size"
                android:textColor="@android:color/white"
                android:layout_gravity="center"
                android:id="@+id/connect_with_linkedin_welcome"
                android:background="@drawable/linkedin_button_background"
                android:padding="@dimen/welcome_linkedin_button_padding"
                android:visibility="visible"
                android:layout_width="@dimen/welcome_button_width"
                android:layout_height="@dimen/welcome_button_linkedin_height"
                android:layout_marginTop="@dimen/welcome_button_margin_top"
                android:layout_marginBottom="@dimen/welcome_button_linkedin_margin_bottom"
                android:text="@string/connect_with_linkedin_label"
                android:textAllCaps="false"
                android:drawableStart="@drawable/ic_linkedin_brand_w"
                android:layout_marginStart="@dimen/welcome_button_margin_start"
                android:layout_marginEnd="@dimen/welcome_button_margin_end"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
